# Scharm

./: CMakeLists.txt  README.md  main.cpp  scharm.cpp  scharm.h
audioApi/: AudioConstants.h  audio.cpp  audio.h
audioLib/: audioObject.cpp  audioObject.h  osc.cpp  osc.h  patch.cpp  patch.h
audioLib/objects/: Wave.cpp  Wave.h  audioDetector.cpp  audioDetector.h  audioObject.cpp  audioObject.h  clock.cpp  clock.h  env.cpp  env.h  filter.cpp  filter.h  mixer.cpp  mixer.h  noise.cpp  noise.h  osc.cpp  osc.h  patchbay.cpp  patchbay.h  sequencer.cpp  sequencer.h  stateKeys.h  vca.cpp  vca.h
audioLib/objects/old/: otherFilters.cpp  otherFilters.h
audioLib/utils/: SignalUtils.cpp  SignalUtils.h  midi.cpp  midi.h  quantize.cpp  quantize.h
design/: filter.cpp  filter.h  plot.cpp  plot.h  plotter.cpp  plotter.h  polyBlep.cpp
gui/: defs.cpp  defs.h  utils.cpp  utils.h  window.cpp  window.h
gui/sections/: env.cpp  env.h  filter.cpp  filter.h  general.cpp  general.h  oscillo.cpp  oscillo.h  patchbay.cpp  patchbay.h  rhythm.cpp  rhythm.h  section.cpp  section.h  sequencer.cpp  sequencer.h  transport.cpp  transport.h  vcos.cpp  vcos.h
gui/widgets/: button.cpp  button.h  knob.cpp  knob.h  patchcord.cpp  patchcord.h  patchcordList.cpp  patchcordList.h  patchpoint.cpp  patchpoint.h  radio.cpp  radio.h  sectionLabel.cpp  sectionLabel.h  waveSlider.cpp  waveSlider.h
state/: nice state.sharm  state.cpp  state.h  state.sharm
utils/: colors.h  fileio.cpp  fileio.h  logger.cpp  logger.h  utils.cpp  utils.h
